fix(Button): fix Button content not center-aligned

--- a/src/Button/styles/index.less
+++ b/src/Button/styles/index.less
@@ -10,6 +10,7 @@
 .rs-btn {
   display: inline-flex;
   align-items: center;
+  justify-content: center;
   margin-bottom: 0; // For input.btn
   font-weight: @btn-font-weight;
   text-align: center;
